# my_agent

./: README.md  app.py  bot.py  chat_cleaned.json  conculsion_chunks.json  main.py  pyproject.toml  strategy_chunks.json
llm/: llm_connect.py  llm_connect2.py  test_llm.py
my_data/: [LINE] Chat with MAKKINS.txt  chinese_straegy.txt  conculsion.txt  english_straegy.txt
scripts/: embadding.py  embadding2.py  embadding3.py  prompt_template.py  query.py  query_processing.py  retrieval.py  transfer.py  transfer2.py  transfer3.py
